# sentinel

./: .add_comments_remaining.py  .bandit  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHITECTURAL_AUDIT_REPORT.md  CODEBASE_ISSUES_FIXED.md  CODE_REVIEW_2026-01-03.md  CODE_REVIEW_SUMMARY.md  COMPLETED_TODOS_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  DESIGN_PROPOSAL_CAPABILITY_MODEL.md  DOCUMENTATION_ADDED.md  Dockerfile  FIXES_APPLIED.md  GITHUB_ACTIONS_SETUP.md  Makefile  Master.json  Modelfile  MoreTODO.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_PLAN.md  PRIORITIZATION_AUDIT.md  PRODUCTION_READINESS.md  README.md  SCAN_FAILURE_ANALYSIS.md  Sentinel.json  SentinelForge_Architecture_Expansion_Proposal.docx  SentinelForge_GodMode_Implementation_Plan.docx  SentinelForge_Production_Readiness_Audit.docx  TODO.md  TODO_UPDATED_2025-12-28.md  TOOL_INSTALLATION_FIX_SUMMARY.md  TRIAD.md  Text Substitutions.plist  WARP.md  add_all_comments.py  check_sourcemaps.py  client_log  (+60 more)
.github/: RUN_WORKFLOWS.md  SECURITY_CI_OVERVIEW.md  copilot-instructions.md
amp/: AGENTS.md
archive_stage/: deletion_list.json  inventory.json  partial_confidence.json
core/: __init__.py  __main__.py  action_dispatcher.py  ai_engine.py  api.py  config.py  db.py  errors.py  evidence.py  evidence_store.py  findings.py  findings_store.py  headless_runner.py  issues_store.py  killchain_store.py  orchestrator.py  pty_manager.py  reasoning.py  recon.py  reporting.py  risk.py  runner.py  scan_orchestrator.py  scanner_engine.py  session.py  task_router.py  tls.py  tool_base.py  (+3 more)
(+1057 files in other folders)
