[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge"
version = "0.1.0"
description = "AI-augmented cybersecurity platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "networkx>=3.2",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "openai>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
ignore_errors = true
